avoid button behind picture

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
 .files-select {
   cursor: pointer;
   font-size: 24px;
-  padding: 20px 15px;
+  padding: 15px 10px;
   background: #e0e0e0;
   border: 1px dashed #808080;
   border-radius: 8px;
@@ -56,6 +56,7 @@ body {
   background: red;
   border-radius: 50%;
   font-size: 30px;
+  z-index: 999;
 }
 
 .empty-hint {
@@ -69,7 +70,7 @@ body {
   width: 500px;
   height: 600px;
   position: fixed;
-  bottom: 200px;
+  bottom: 100px;
   left: calc(50% - 250px);
   transform-origin: center 2900px;
   display: flex;
